# gazebo-yarp-digit-plugin

./: CMakeLists.txt  README.md
ControlDigitPlugin/: CMakeLists.txt
ControlDigitPlugin/src/: ControlDigitPlugin.cpp  ControlDigitPlugin.h  ControlDigitPlugin.hh
ControlHandPlugin/: CMakeLists.txt
ControlHandPlugin/src/: ControlHandPlugin.cpp  ControlHandPlugin.h  TrajectoryGenerator.h
ControlHandPlugin/thrift/: idl.thrift
ControlPlugin/: CMakeLists.txt
ControlPlugin/src/: ControlPlugin.cpp  ControlPlugin.h  TrajectoryGenerator.cpp  TrajectoryGenerator.h
ControlPlugin/thrift/: idl.thrift
GraspExample/: CMakeLists.txt  script.sh
GraspExample/src/: GraspExample.cpp  GraspExample.h  main.cpp
GraspExample/thrift/: idl.thrift
RendererDigitPlugin/: CMakeLists.txt
RendererDigitPlugin/src/: RendererDigitPlugin.cpp  RendererDigitPlugin.h  RendererDigitPlugin.hh
cpp-wrapper/: CMakeLists.txt
cpp-wrapper/src/: main.cpp
gazebo_mesh/: CMakeLists.txt
gazebo_mesh/models/digit/: model.config  model.sdf
gazebo_mesh/src/: RendererDigitPlugin.cpp  RendererDigitPlugin.hh
gazebo_mesh/world/: file.world
models/: CMakeLists.txt
models/digit/: digit_less.STL  gel.stl  gel_less.stl  model.config  model.sdf
models/env_table/: model.config  model.sdf
models/left_hand_mk3_one_sensor/: model.config  model.urdf
models/left_hand_mk3_three_sensors/: model.config  model.urdf
models/mustard_bottle/: model.rsdf  model.sdf
models/mustard_bottle/meshes/: obj_000005_collision_dimezzato.dae  obj_000005_collision_modified.dae  obj_000005_collision_new.dae
models/sphere_digit/mesh/: textured_sphere_smooth_meters.obj.mtl
pybind/: CMakeLists.txt
pybind/python_files/: renderer_pybind.py  sensor_pybind.py
pybind/src/: main.cpp
tacto-cpp-wrapper/: CMakeLists.txt
tacto-cpp-wrapper/mesh/: textured_sphere_smooth_meters.obj.mtl
tacto-cpp-wrapper/python/: sensor.py
tacto-cpp-wrapper/src/: main.cpp
worlds/: CMakeLists.txt  digit_and_ball.world  digit_and_mustard.world  file.world  hand_one_sensor.world  hand_three_sensors.world
